--- a/back-end/.gitignore
+++ b/back-end/.gitignore
@@ -1,3 +1,16 @@
-node_modules
-**/node_modules/
+# Node
+node_modules/
+dist/
 .env
+
+# Vite / React
+.vite/
+*.log
+
+# IDEs
+.vscode/
+.idea/
+
+# SOs
+.DS_Store
+Thumbs.db
