Fazer deploy no Render

--- a/back-end/package.json
+++ b/back-end/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "lista_tarefa": "file:..",
+    "path": "^0.12.7",
     "pg": "^8.16.3"
   }
 }
